--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,36 @@
 @tailwind base;
+
+@layer base {
+    h1 {
+        @apply text-2xl font-bold;
+    }
+    h2 {
+        @apply text-xl;
+    }
+    h3 {
+        @apply text-lg;
+    }
+    ol,
+    ul {
+        margin: 15px;
+        padding-left: 15px;
+        list-style: inherit;
+    }
+}
+
 @tailwind components;
 @tailwind utilities;
+
+.highlight {
+    display: block;
+    position: absolute;
+    height: 100px;
+    width: 300px;
+    border-radius:50%;
+    opacity: 0.5;
+    top: -4px;
+    left: -100px;
+    pointer-events: none;
+    transition: 0.3s ease all;
+    background: radial-gradient(rgba(157,128,238,1),rgba(157,128,238,0));
+}
