moving with arrows, useEffect

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,45 @@
     transition: 0.3s ease all;
     background: radial-gradient(rgba(157,128,238,1),rgba(157,128,238,0));
 }
+
+.link-app {
+    position: relative;
+    height: calc(100vh - 40px);
+}
+
+.arrows {
+    display: grid;
+    grid-template: auto auto / auto auto auto;
+    grid-template-areas:
+    '. up .'
+    'left down right';
+    grid-gap: 8px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
+.arrows button:hover {
+    background: rgba(51, 177, 87, 0.811);
+    color: #fff;
+}
+
+.arrows button:first-child {
+    grid-area: up;
+}
+
+.arrows button:nth-child(2) {
+    grid-area: left;
+}
+
+.arrows button:nth-child(3) {
+    grid-area: down;
+}
+
+.arrows button:last-child {
+    grid-area: right;
+}
+
+.images {
+    display: none;
+}
