--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,13 @@
     margin: 0;
     background-image: url('https://i.imgur.com/noNWRPk.png');
 }
+
+.image-grid {
+    grid-gap: 15px;
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    grid-auto-rows: minmax(50px,200px);
+}
+
+.image:nth-child(6n) {
+    grid-column-end: span 5;
+}
