--- a/src/index.css
+++ b/src/index.css
@@ -153,3 +153,78 @@
     color: #fff;
     transform: scale(1.02);
 }
+
+.math-card {
+    background: #fff;
+    border-radius: 5px;
+    border: 2px solid #333;
+    padding: 20px 30px;
+    height: 100%;
+    min-width: 250px;
+    margin-right: 50px;
+    font-size: 50px;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, minmax(50px, 100px));
+    grid-template-areas:
+    '. number1'
+    'operator number2'
+    'total total';
+}
+
+.spot {
+    border-radius: 5px;
+    padding-right: 15px;
+    transition: 0.3s ease background;
+}
+
+.spot,
+.total {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.spot:first-child {
+    grid-area: number1;
+}
+
+.spot:nth-child(2) {
+    grid-area: number2;
+}
+
+.spot:nth-child(3) {
+    grid-area: operator;
+}
+
+.total {
+    border-top: 4px solid #333;
+    padding-top: 10px;
+    grid-area: total;
+    justify-content: flex-end;
+    font-size: 100px;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 8px;
+    margin-bottom: 50px;
+}
+
+.card {
+    background: #fff;
+    padding: 15px;
+    border-radius: 3px;
+    border: 1px solid #333;
+    font-size: 22px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.2s ease all;
+}
+
+.card:hover {
+    box-shadow: 2px 3px 0 rgba(0, 0, 0, 0.3);
+    transform: translateY(-2px);
+}
