--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,30 @@
 @tailwind components;
 @tailwind utilities;
 
+blockquote {
+    border-left: 5px solid #ccc;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
+}
+
+blockquote::before {
+    color: #ccc;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+}
+
+code {
+    font-size: 0.9em;
+    padding: .2rem .5rem;
+    margin: 0 .2rem;
+    font-size: 90%;
+    white-space: nowrap;
+    background: #F1F1F1;
+    border: 1px solid #E1E1E1;
+    border-radius: 4px;
+}
+
 .highlight {
     display: block;
     position: absolute;
