--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --shadow-light: #00000026;
+    --shadow-medium: #0000004d;
+}
+
 blockquote {
     border-left: 5px solid #ccc;
     margin: 1.5em 10px;
@@ -247,4 +252,37 @@ code {
 .card:hover {
     box-shadow: 2px 3px 0 rgba(0, 0, 0, 0.3);
     transform: translateY(-2px);
+}
+
+.choice {
+    border-width: 8px;
+    box-shadow: inset 0 0.5rem var(--shadow-light);
+}
+
+
+.choice::after {
+    opacity: 0;
+    transition: opacity 0.4s;
+}
+
+.choice:focus .choice::after {
+    opacity: 1;
+    box-shadow: 0 0 0 2rem #223351;
+    z-index: -2;
+}
+
+.rock {
+
+}
+
+.paper {
+
+}
+
+.scissors {
+
+}
+
+.computer {
+
 }
