--- a/src/index.css
+++ b/src/index.css
@@ -286,3 +286,52 @@ code {
 .computer {
 
 }
+
+.calendar {
+    position: relative;
+    width: 400px;
+    min-height: 400px;
+    background: rgba(255,255,255,0.1);
+    box-shadow: 0 25px 45px rgba(0,0,0,0.1);
+    border: 1px solid rgba(255,255,255,0.5);
+    border-right: 1px solid rgba(255,255,255,0.2);
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+    backdrop-filter: blur(25px);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.calendar-day {
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    border-radius: 4px;
+}
+
+.calendar-day:hover {
+    background: white;
+    color: #111;
+}
+
+.calendar-day-selected {
+    background: white;
+    color: #111 !important;
+}
+
+.calendar-week-day {
+    background: white;
+    color: #111;
+    border-radius: 4px;
+    font-weight: 600;
+}
+
+.date-chooser {
+    padding-top: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-bottom: 0.5rem;
+}
