--- a/src/index.css
+++ b/src/index.css
@@ -410,7 +410,7 @@ code {
 
 .text-to-speech-wrapper {
     border: 1px solid #fff;
-    border-radius: 15px;
+    border-radius: 0.5em;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
     font-size: 2rem;
     position: relative;
