--- a/src/index.css
+++ b/src/index.css
@@ -180,10 +180,8 @@ code {
 }
 
 .math-card {
-    background: #fff;
-    border-radius: 5px;
-    border: 2px solid #949494;
-    padding: 20px 30px;
+    border-radius: 0.125em;
+    padding: 0.5em 0.75em;
     min-width: 250px;
     margin-right: 50px;
     font-size: 50px;
@@ -223,11 +221,12 @@ code {
 }
 
 .total {
-    border-top: 4px solid #333;
+    border-top: 4px solid white;
     padding-top: 10px;
     grid-area: total;
     justify-content: flex-end;
     font-size: 100px;
+    color: white;
 }
 
 .cards {
